...
            }
          },
        ),
        title: Text(
          _isRecreateMode
              ? '${_selectedItems.length} Items selected'
              : 'Food History',
          style: TextStyle(
            fontSize: 20,
            fontWeight: FontWeight.bold,
            letterSpacing: 1.2,
            color: theme.appBarTheme.titleTextStyle?.color ?? Colors.white,
          ),
...
        actions: [
          if (!_isRecreateMode)
            TextButton.icon(
              onPressed: _toggleRecreateMode,
              icon: Icon(Icons.replay, color: theme.appBarTheme.titleTextStyle?.color ?? Colors.white),
              label: Text(
                'RECREATE',
                style: TextStyle(
                  fontSize: 16,
                  fontWeight: FontWeight.bold,
                  letterSpacing: 1.2,
                  color: theme.appBarTheme.titleTextStyle?.color ?? Colors.white,
                ),
...
