...
                      },
                    ),
                    
                    _buildMenuTile(
                      context: context,
                      icon: Icons.history,
                      title: 'History',
                      onTap: () {
                        if (user != null) {
                          Navigator.push(
                            context,
                            MaterialPageRoute(
                              builder: (context) => HistoryPage(userId: user.uid),
...
