...
    DateTime today = DateTime.now();
    int daysDifference = expiryDate.difference(today).inDays;

    IconData iconData;
    Color iconColor;

    // Adjusted logic for "Fresh", "Expiring Soon", and "Expired"
    if (daysDifference < 0) {
      // Expired items
      iconData = Icons.error;
      iconColor = Colors.red[700]!;
    } else if (daysDifference == 0) {
      // Expiring today
...
