enum FoodCategory {
  dairy,
  fish,
  frozen,
  fruits,
  grains,
  tinned,
  meat,
  vegetables, 
  beverage,
 
...
